Changed default behavior to perform GC,  and fixed a bug in how properties were read in from the properties file.